# smb2-hacking-notes

./: README.md
Bites/: README.md  SMB2.dmw  SMB22.dmw  addressestocorrupt.dmw  joysticksmb2.dmw  reallycoolstuff.dmw  smb1 ball struct.dmw  smb1.dmw  smb2 ball control struct.dmw  smb2camera.dmw  smb2constants1.dmw  smb2constants2.dmw  smb2constants3.dmw  smb2experimentalshit.dmw
ComplexPlane/: README.md  adventure.md  ape.md  ballstruct.md  banana-blitz.md  bigmem.md  bites-addresses.md  cache.md  camera.md  cm.md  community-decomp.md  custom-levels.md  cutsman.md  debugtext.md  dolphin.md  dvd.md  effect.md  floats.md  ghidra-plugin.md  ghidra-to-git.md  ghidra.md  gma.md  graphics.md  gx.md  heaps.md  input.md  iw.md  links.md  loading.md  mainloop.md  mathlib.md  memsave.md  modes.md  nintendont.md  notes.md  physics.md  powerpc.md  rel.md  relloader.md  savestates.md  (+8 more)
ComplexPlane/symbols/: GM2E8P-stripped.map  GM2E8P.map  GMBE8P-fixed-math.map  GMBE8P-musyx.map  GMBE8P-smb1-yoshimaster-sdk-and-data.map  GMBE8P.map  RSME8P-stripped.map  RSME8P.map  ball-placement.dmw  bb-symbols.map  camera.dmw  fluctuation-stuff.dmw  ostick.dmw  test1.map  yoshimaster-GMBE8P-updated-mathutil-and-ball-kinematics-and-stuff-2020-06-08.map
CraftedCart/VoidModLoader/2020-07-05/: CMakeLists.txt  smb2_symbol_map.json  smb2_symbol_map.json.old  smb2_symbol_map.json.old3
CraftedCart/VoidModLoader/2020-07-05/assets/: dang_it_gx_model_viewer.mtl  vml_font_exo2.tpl  vml_font_exo2_bw.tpl
CraftedCart/VoidModLoader/2020-07-05/cmake/: gamecube_toolchain.cmake
CraftedCart/VoidModLoader/2020-07-05/cmake/Platform/: GameCube.cmake
CraftedCart/VoidModLoader/2020-07-05/mkb2/include/mkb2/: ape.h  ball.h  common.h  display.h  gamecube.h  rel.h
CraftedCart/VoidModLoader/2020-07-05/vml_config/: CMakeLists.txt
CraftedCart/VoidModLoader/2020-07-05/vml_config/src/vml/config/: font.c  init.c
CraftedCart/VoidModLoader/2020-07-05/vml_init/: CMakeLists.txt
CraftedCart/VoidModLoader/2020-07-05/vml_init/include/v/container/: vec.h
CraftedCart/VoidModLoader/2020-07-05/vml_init/include/vml/: patch.h  rel.h
CraftedCart/VoidModLoader/2020-07-05/vml_init/src/v/container/: vec.c
CraftedCart/VoidModLoader/2020-07-05/vml_init/src/vml/: alloc.c  alloc.c.old  init.c  log.c  patch.c
CraftedCart/VoidModLoader/2020-07-05/void/: CMakeLists.txt
CraftedCart/VoidModLoader/2020-07-05/void/include/void/: draw.h
CraftedCart/VoidModLoader/2020-07-05/void/src/void/: init.c
CraftedCart/VoidModLoader/2020-07-05/void_builder/: Cargo.toml
CraftedCart/VoidModLoader/2020-07-05/void_builder/src/: lib.rs  main.rs
CraftedCart/VoidModLoader/2020-08-06/: patch_game.sh  rainbow_text.py  smb2_symbol_map.json  smb2_symbol_map.json.old2
CraftedCart/VoidModLoader/2020-08-06/mkb2/: CMakeLists.txt
CraftedCart/VoidModLoader/2020-08-06/mkb2/include/mkb2/: camera.h  common.h  rel.h
CraftedCart/VoidModLoader/2020-08-06/vml_init/include/v/container/: vec.h
CraftedCart/VoidModLoader/2020-08-06/vml_init/include/vml/: alloc.h  log.h  patch.h
CraftedCart/VoidModLoader/2020-08-06/vml_init/src/vml/: init.h  patch.c  rel.c
CraftedCart/VoidModLoader/2020-08-06/void/: CMakeLists.txt
CraftedCart/VoidModLoader/2020-08-06/void/include/void/: draw.h  stage_info.h
CraftedCart/VoidModLoader/2020-08-06/void/src/void/: draw.c  font.c  font.h  init.c  init.h  stage_info.c
CraftedCart/VoidModLoader/2020-08-06/void_builder/src/: fs.rs
TheBombSquad/: ballstruct.dmw  cameraandcstick.dmw  g_play_bgm.md  g_some_bitflag.md  misc_story_mode_fix.txt  miscnotes.md  some_smb1_stuff.txt  stagedefEffectType1.txt  stagedefForegroundObject.txt  storymodemusiccode.txt  sub_mode.md
TwixNinja/: 803133ccHelpers.txt  cmEntryFormat.txt  cmentries.txt  deluxeskippablelevels.txt  func800104bc.txt  func803133cc.txt  func80314308.txt  jumpDistance.txt  levelprogress.txt  replace803133cc.txt  stageid.txt
